# HackODS2026_PatosClimaticODS

./: .gitignore  LICENSE  README.md  _quarto.yml  ai-log.md  main.py  pyproject.toml
dashboard/: HackODS.ipynb  _quarto.yml  index.qmd  styles.css
data/matricula/: salida (10).xls  salida (11).xls  salida (12).xls  salida (13).xls  salida (14).xls  salida (15).xls  salida (16).xls  salida (17).xls  salida (18).xls  salida (19).xls  salida (2).xls  salida (20).xls  salida (21).xls  salida (22).xls  salida (23).xls  salida (24).xls  salida (25).xls  salida (26).xls  salida (27).xls  salida (28).xls  salida (29).xls  salida (3).xls  salida (30).xls  salida (31).xls  salida (32).xls  salida (33).xls  salida (4).xls  salida (5).xls  salida (6).xls  salida (7).xls  salida (8).xls  salida (9).xls
data/resultados/: 2023Tmax.xlsx  atlas_datos_unificado.xlsx  base_datos_final.csv  base_datos_final_con_infied.csv  base_infraestructura_municipal.csv  clima_municipal.csv  matricula_unificada_final.csv  tmax_promedio_municipal_estaciones.csv
data/temperatura_municipio/: mun21gw.html  municipios_temperatura_final.csv  tman13gw.dbf  tman13gw.html  tman13gw.shx  tman13gw.xml
docs/: HackODS.html  ai-log.html  index.html  search.json  styles.css
docs/dashboard/: HackODS.html  (+1 more)
scripts/: README.md  matricula_procesamiento.py  procesamiento - copia.py  procesamiento_extremos_municipio.py  procesamiento_infied.py  procesamiento_temperatura.py  procesamiento_temperatura2.py  procesamiento_temperaturas_maximas_estaciones.py  procesamiento_temperaturas_maximas_promedio_estaciones.py
(+36 files in other folders)
