[project]
name = "hackods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "lxml>=6.0.2",
    "notebook>=7.5.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf>=6.1.1",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
]
